<resources>
    <string name="app_name">Fitness Tracker</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="password">Password</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign up</string>
    <string name="height">Height</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="flname">TextView</string>
    <string name="vusername">TextView</string>
    <string name="todo">TODO</string>
    <string name="user_conv">Name</string>
    <string name="send">Send</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>